RAIN-1470 : PT Apk css issue fixes  (#1952)
* RAIN-1470 : PT-Mutation Apk Misalignment Issues fix

* RAIN-1470 : PT Apk Issue for Table Misalignment fix

* RAIN-1470 : PT APK issue fix for Search Preview screen

* RAIN-1470 : PT APK issue fix for PT Create acknowledgement alignment

* RAIN-1470 : PT Mutation Apply screen apk issue fix

* RAIN-1470 : PT Assess Year Popup Apk issue fix

--- a/frontend/web/rainmaker/dev-packages/egov-ui-framework-core/src/ui-molecules/Table/index.css
+++ b/frontend/web/rainmaker/dev-packages/egov-ui-framework-core/src/ui-molecules/Table/index.css
@@ -17,7 +17,7 @@ table tbody  tr  td {
 
 @media only screen and (max-width: 960px) {
   table tbody tr td {
-    width: 50% !important;
+    width: 45% !important;
     padding:4px 8px 4px 10px !important;
     font-size: 13px !important;
     height: auto !important;
